--- a/index.html
+++ b/index.html
@@ -4,7 +4,95 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejercicio 01: ¿Es igual a 100?</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #e9eef5;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    .contenedor {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      gap: 30px;
+      margin: 50px auto;
+      max-width: 900px;
+    }
+
+    .tarjeta {
+      background-color: #ffffff;
+      border: 1px solid #c9d2e0;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.08);
+      width: 400px;
+      text-align: left;
+      padding: 20px 25px;
+    }
+
+    h2 {
+      color: #0077c8;
+      text-align: center;
+      margin-bottom: 15px;
+    }
+
+    .instrucciones {
+      background-color: #e7f6ef;
+      border: 1px solid #b4dfc4;
+      border-radius: 6px;
+      padding: 10px 15px;
+      margin-bottom: 15px;
+    }
+
+    .instrucciones h3 {
+      margin: 0 0 8px 0;
+      color: #1b7b56;
+    }
+
+    .instrucciones p {
+      margin: 0;
+      color: #333;
+      line-height: 1.4;
+    }
+
+    button {
+      background-color: #1e88e5;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 20px;
+      cursor: pointer;
+      font-size: 15px;
+      transition: background-color 0.2s;
+      display: block;
+      margin: 10px auto 0;
+    }
+
+    button:hover {
+      background-color: #1565c0;
+    }
+
+    .resultado {
+      background-color: #f7f9fb;
+      border: 1px solid #d1d5db;
+      border-radius: 6px;
+      padding: 10px;
+      margin-top: 10px;
+      text-align: center;
+      font-weight: bold;
+      color: #155724;
+      display: none;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-size: 13px;
+      color: #5f6368;
+    }
+  </style>
 </head>
 <body>
 
@@ -15,8 +103,7 @@
       <div class="instrucciones">
         <h3>?? Instrucciones</h3>
         <p>
-          En este ejercicio, vamos a comprobar si una variable llamada <strong>valor</strong> 
-          es exactamente igual a 100.<br>
+          En este ejercicio, vamos a comprobar si una variable llamada <strong>valor</strong> es exactamente igual a 100.<br>
           Si lo es, se mostrará un mensaje de felicitación. ¡Vamos a verlo en acción!
         </p>
       </div>
@@ -31,6 +118,24 @@
     Curso de JavaScript - Enseñanza Media | Ejercicio 1 de Estructuras de Control
   </footer>
 
-  <script src="script.js"></script>
+  <script>
+    function ejecutarEjercicio() {
+      const valor = 100; // puedes cambiar este valor para probar
+      const resultado = document.getElementById("resultado");
+
+      if (valor === 100) {
+        resultado.textContent = "✅ ¡Correcto! El valor es exactamente igual a 100.";
+        resultado.style.display = "block";
+        resultado.style.color = "#155724";
+        resultado.style.backgroundColor = "#e6ffed";
+      } else {
+        resultado.textContent = "❌ El valor no es igual a 100.";
+        resultado.style.display = "block";
+        resultado.style.color = "#721c24";
+        resultado.style.backgroundColor = "#f8d7da";
+      }
+    }
+  </script>
+
 </body>
 </html>
