--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ejercicios JavaScript - Estructuras de Control</title>
+  <title>Ejercicio 01 - ¿Es igual a 100?</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div class="contenedor">
-    <!-- Tarjeta 1 -->
     <div class="tarjeta">
       <h2>?? Ejercicio 01: ¿Es igual a 100?</h2>
 
@@ -22,32 +21,14 @@
         </p>
       </div>
 
-      <div id="resultado1" class="resultado"></div>
+      <div id="resultado" class="resultado"></div>
 
-      <button onclick="ejecutarEjercicio1()">Ejecutar Ejercicio</button>
-    </div>
-
-    <!-- Tarjeta 2 -->
-    <div class="tarjeta">
-      <h2>?? Ejercicio 02: ¿Es menor que 100?</h2>
-
-      <div class="instrucciones">
-        <h3>?? Instrucciones</h3>
-        <p>
-          En este segundo ejercicio, comprobaremos si una variable llamada <strong>valor</strong> 
-          es menor que 100.<br>
-          Si lo es, mostraremos un mensaje indicando que el valor es menor.
-        </p>
-      </div>
-
-      <div id="resultado2" class="resultado"></div>
-
-      <button onclick="ejecutarEjercicio2()">Ejecutar Ejercicio</button>
+      <button onclick="ejecutarEjercicio()">Ejecutar Ejercicio</button>
     </div>
   </div>
 
   <footer>
-    Curso de JavaScript - Enseñanza Media | Ejercicio 1 de Estructuras de Control
+    Curso de JavaScript - Enseñanza Media | Ejercicio 01 de Estructuras de Control
   </footer>
 
   <script src="script.js"></script>
