--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
   <div class="contenedor">
     <div class="tarjeta">
-      <h2>?? Ejercicio 01: ¿Es igual a 100?</h2>
+      <h2> Ejercicio 01: ¿Es igual a 100?</h2>
 
       <div class="instrucciones">
-        <h3>?? Instrucciones</h3>
+        <h3> Instrucciones</h3>
         <p>
           En este ejercicio, vamos a comprobar si una variable llamada <strong>valor</strong> 
           es exactamente igual a 100.<br>
@@ -21,9 +21,10 @@
         </p>
       </div>
 
+      <!-- Mensaje de resultado (inicialmente oculto) -->
       <div id="resultado" class="resultado"></div>
 
-      <button onclick="ejecutarEjercicio()">Ejecutar Ejercicio</button>
+      <button id="btn-ejecutar">Ejecutar Ejercicio</button>
     </div>
   </div>
 
